--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="animate-fade-in-up delay-1">Secure, transparent, and efficient contract farming powered by Ethereum.</p>
             <a href="dashboard.html" class="btn btn-primary animate-fade-in-up delay-2">Get Started Now</a>
             <div class="hero-image animate-fade-in delay-3">
-                <img src="images/hero-illustration.svg" alt="Blockchain and Agriculture Illustration"> <!-- Placeholder: Add a relevant SVG/image -->
+                <img src="https://www.nadcab.com/public/images/agriculture-blockchain/blockchain-in-agriculture.png" alt="Blockchain and Agriculture Illustration"> <!-- Placeholder: Add a relevant SVG/image -->
             </div>
         </div>
         <div class="custom-shape-divider-bottom-161616"> <!-- Optional wave divider -->
