--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -119,7 +119,7 @@
         </div>
     </footer>
 
-    <script src="js/auth.js"></script>
+    <!-- <script src="js/auth.js"></script> -->
      <script>
         document.addEventListener('DOMContentLoaded', () => {
             checkAuth('admin'); // Check if user is logged in, requires 'admin' role
