--- a/index.html
+++ b/index.html
@@ -165,17 +165,15 @@
                     if (isLoggedIn) {
                         // User is logged in - Show Dashboard and Logout
                         const dashboardLink = document.createElement('a');
-                        dashboardLink.href = userRole === 'admin' ? 'admin-dashboard.html' : 'user-dashboard.html';
+                        dashboardLink.href = userRole === 'admin' ? 'php/admin-dashboard.php' : 'php/user-dashboard.php';
                         dashboardLink.className = 'btn btn-nav';
                         dashboardLink.textContent = 'Go to Dashboard';
                         navbarAuthLinks.appendChild(dashboardLink);
     
-                        const logoutBtn = document.createElement('button');
-                        logoutBtn.id = 'indexLogoutButton'; // Can be useful for specific styling/targeting
-                        logoutBtn.className = 'btn btn-nav btn-logout'; // Apply button styling
-                        logoutBtn.innerHTML = '<i class="fas fa-sign-out-alt"></i> Logout'; // Add icon
-                        // IMPORTANT: Assumes handleLogout is defined globally by auth.js or correctly imported if using modules
-                        logoutBtn.addEventListener('click', handleLogout);
+                        const logoutBtn = document.createElement('a');
+                        logoutBtn.href = 'php/auth.php?logout=true';
+                        logoutBtn.className = 'btn btn-nav btn-logout';
+                        logoutBtn.textContent = 'Logout';
                         navbarAuthLinks.appendChild(logoutBtn);
     
                     } else {
