--- a/login.html
+++ b/login.html
@@ -1,47 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - AgriChain Secure</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css"> <!-- Use the existing stylesheet -->
-    <link rel="stylesheet" href="css/auth-styles.css"> <!-- Add a new stylesheet for auth-specific styles -->
-</head>
-<body class="auth-body">
-    <div class="auth-container animate-fade-in">
-        <div class="auth-form-section animate-slide-in-left">
-            <a href="index.html" class="logo auth-logo">AgriChain Secure</a>
-            <h2 class="auth-title">Welcome Back!</h2>
-            <p class="auth-subtitle">Log in to manage your contracts.</p>
-
-            <form id="loginForm" class="auth-form">
-                <div id="loginError" class="error-message hidden">Invalid credentials. Please try again.</div>
-                <div class="form-group">
-                    <label for="email"><i class="fas fa-envelope icon-prefix"></i>Email Address</label>
-                    <input type="email" id="email" placeholder="you@example.com" required>
-                </div>
-                <div class="form-group">
-                    <label for="password"><i class="fas fa-lock icon-prefix"></i>Password</label>
-                    <input type="password" id="password" placeholder="Enter your password" required>
-                </div>
-                <button type="submit" class="btn btn-primary btn-auth">
-                    <span class="btn-text">Login</span>
-                    <span class="spinner hidden"><i class="fas fa-spinner fa-spin"></i></span>
-                </button>
-            </form>
-            <p class="auth-switch">Don't have an account? <a href="signup.html">Sign Up Now</a></p>
-        </div>
-        <div class="auth-image-section animate-slide-in-right" style="background-image: url('https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80');">
-             <!-- Image via CSS background -->
-            <div class="auth-image-overlay">
-                <h3>Secure & Transparent Farming Contracts</h3>
-                <p>Leveraging blockchain for trust and efficiency.</p>
-            </div>
-        </div>
+<form id="loginForm" class="auth-form" action="php/auth.php" method="POST">
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" name="email" placeholder="Email" required>
     </div>
-
-    <script src="js/auth.js"></script> <!-- New JS file for auth logic -->
-</body>
-</html>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" placeholder="Password" required>
+    </div>
+    <button type="submit" name="login">Login</button>
+</form>
