--- a/signup.html
+++ b/signup.html
@@ -1,22 +1,115 @@
-<form id="signupForm" class="auth-form" action="php/auth.php" method="POST">
-    <div class="form-group">
-        <label for="name">Full Name</label>
-        <input type="text" name="name" placeholder="Your Name" required>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up - AgriChain Secure</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Link the main stylesheet FIRST -->
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Link the auth-specific stylesheet SECOND -->
+    <link rel="stylesheet" href="css/auth-styles.css">
+</head>
+<body>
+    <div class="auth-container">
+        <!-- Animated Background Shapes (Optional) -->
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+
+        <div class="auth-box animate-fade-in-scale"> <!-- Main animation for the box -->
+             <!-- Logo or Branding -->
+             <a href="index.html" class="auth-logo-link">
+                 <span class="auth-logo-text">AgriChain Secure</span>
+                 <!-- <img src="images/logo-green.png" alt="AgriChain Secure Logo" class="auth-logo"> -->
+             </a>
+
+            <h2>Create Your Account</h2>
+            <p class="auth-subtitle">Join the decentralized farming revolution.</p>
+
+            <!-- Signup Form -->
+            <form id="signupForm" class="auth-form" action="php/auth.php" method="POST">
+                <!-- Staggered animation for fields -->
+                <div class="form-group animate-field" style="animation-delay: 0.2s;">
+                    <label for="name">Full Name</label>
+                    <div class="input-wrapper">
+                        <i class="fas fa-user input-icon"></i>
+                        <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+                    </div>
+                </div>
+                <div class="form-group animate-field" style="animation-delay: 0.4s;">
+                    <label for="email">Email Address</label>
+                     <div class="input-wrapper">
+                        <i class="fas fa-envelope input-icon"></i>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
+                </div>
+                <div class="form-group animate-field" style="animation-delay: 0.6s;">
+                    <label for="password">Password</label>
+                    <div class="input-wrapper">
+                        <i class="fas fa-lock input-icon"></i>
+                        <input type="password" id="password" name="password" placeholder="Choose a strong password" required minlength="8"> <!-- Added minlength example -->
+                     </div>
+                     <!-- Optional: Add password strength indicator here -->
+                </div>
+                <div class="form-group animate-field" style="animation-delay: 0.8s;">
+                    <label for="role">Select Your Role</label>
+                     <div class="input-wrapper select-wrapper"> <!-- Added select-wrapper class -->
+                         <i class="fas fa-users-cog input-icon"></i> <!-- Example icon -->
+                        <select id="role" name="role" required>
+                            <option value="" disabled>-- Select Role --</option> <!-- Added default disabled option -->
+                            <option value="user" selected>Farmer / Buyer (User)</option>
+                            <option value="admin">Administrator</option>
+                            <!-- Only include Admin if self-signup as admin is allowed -->
+                        </select>
+                    </div>
+                </div>
+                <button type="submit" name="signup" class="btn btn-primary btn-block animate-field" style="animation-delay: 1.0s;">Create Account</button>
+            </form>
+
+            <!-- Area to display messages -->
+            <div id="messageArea" class="message-area"></div>
+
+            <p class="auth-switch animate-field" style="animation-delay: 1.2s;">
+                Already have an account? <a href="login.html">Log In</a>
+            </p>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" name="email" placeholder="you@example.com" required>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" placeholder="Create a strong password" required>
-    </div>
-    <div class="form-group">
-        <label for="role">Role</label>
-        <select name="role" required>
-            <option value="user" selected>User</option>
-            <option value="admin">Admin</option>
-        </select>
-    </div>
-    <button type="submit" name="signup">Sign Up</button>
-</form>
+
+    <!-- Include the script for handling URL parameter messages (same as login.html) -->
+     <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const messageArea = document.getElementById('messageArea');
+            if (!messageArea) return;
+
+            const params = new URLSearchParams(window.location.search);
+            let messageText = '';
+            let messageClass = ''; // Will be 'success-message' or 'error-message'
+
+            // Check specifically for signup errors first
+            if (params.has('error')) {
+                 const errorType = params.get('error');
+                 const errorMessages = {
+                     'empty_fields': 'Please fill in all required fields.',
+                     'invalid_email': 'Please enter a valid email address.',
+                     'email_exists': 'This email address is already registered.',
+                     'invalid_role': 'An invalid role was selected.',
+                     'signup_failed': 'Account creation failed. Please try again.',
+                     'db_error': 'A database error occurred. Please try again later.',
+                     'default': 'An unknown error occurred during signup.'
+                 };
+                 messageText = errorMessages[errorType] || errorMessages['default'];
+                 messageClass = 'error-message';
+            }
+            // Add other checks if needed (e.g., success messages aren't typical on the signup page itself unless redirecting back)
+
+            if (messageText) {
+                messageArea.textContent = messageText;
+                messageArea.className = `message-area ${messageClass}`;
+                messageArea.classList.add('animate-message'); // Add animation class
+            }
+        });
+    </script>
+</body>
+</html>
